class_file/snapshots/runtime-interfaces-basic_interface-BasicInterfaceMain.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class interfaces.basic_interface.BasicInterfaceMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #17                      //interfaces/basic_interface/BasicInterfaceMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable
   #8 = Utf8               interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable
   #9 = Methodref          #7.#3            // interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable."<init>":()V
  #10 = InterfaceMethodref #11.#12          // interfaces/basic_interface/BasicInterfaceMain$Summable.sum:(II)I
  #11 = Class              #13              // interfaces/basic_interface/BasicInterfaceMain$Summable
  #12 = NameAndType        #14:#15          // sum:(II)I
  #13 = Utf8               interfaces/basic_interface/BasicInterfaceMain$Summable
  #14 = Utf8               sum
  #15 = Utf8               (II)I
  #16 = Methodref          #7.#12           // interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable.sum:(II)I
  #17 = Class              #18              // interfaces/basic_interface/BasicInterfaceMain
  #18 = Utf8               interfaces/basic_interface/BasicInterfaceMain
  #19 = Utf8               Code
  #20 = Utf8               LineNumberTable
  #21 = Utf8               LocalVariableTable
  #22 = Utf8               this
  #23 = Utf8               Linterfaces/basic_interface/BasicInterfaceMain;
  #24 = Utf8               main
  #25 = Utf8               ([Ljava/lang/String;)V
  #26 = Utf8               args
  #27 = Utf8               [Ljava/lang/String;
  #28 = Utf8               asInterface
  #29 = Utf8               Linterfaces/basic_interface/BasicInterfaceMain$Summable;
  #30 = Utf8               asInstance
  #31 = Utf8               Linterfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable;
  #32 = Utf8               asInterfaceRes
  #33 = Utf8               I
  #34 = Utf8               asInstanceRes
  #35 = Utf8               SourceFile
  #36 = Utf8               BasicInterfaceMain.java
  #37 = Utf8               NestMembers
  #38 = Utf8               InnerClasses
  #39 = Utf8               ClassImplementingSummable
  #40 = Utf8               Summable
{
  public interfaces.basic_interface.BasicInterfaceMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Linterfaces/basic_interface/BasicInterfaceMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=3, locals=5, args_size=1
         0: new           #7                  // class interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable
         3: dup                     
         4: invokespecial #9                  // Method interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable."<init>":()V
         7: astore_1                
         8: new           #7                  // class interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable
        11: dup                     
        12: invokespecial #9                  // Method interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable."<init>":()V
        15: astore_2                
        16: aload_1                 
        17: iconst_1                
        18: iconst_2                
        19: invokeinterface #10, 3              // InterfaceMethod interfaces/basic_interface/BasicInterfaceMain$Summable.sum:(II)I
        24: istore_3                
        25: aload_2                 
        26: iconst_3                
        27: iconst_4                
        28: invokevirtual #16                 // Method interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable.sum:(II)I
        31: istore        4                 
        33: return                  
      LineNumberTable:
        line 16: 0
        line 17: 8
        line 18: 16
        line 19: 25
        line 20: 33
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       34     0  args   [Ljava/lang/String;
           8       26     1  asInterface Linterfaces/basic_interface/BasicInterfaceMain$Summable;
          16       18     2  asInstance Linterfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable;
          25        9     3  asInterfaceRes I
          33        1     4  asInstanceRes I
}
SourceFile: "BasicInterfaceMain.java"
NestMembers:
  interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable
  interfaces/basic_interface/BasicInterfaceMain$Summable
InnerClasses:
  static #39= #7 of #17;                      // ClassImplementingSummable=class interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable of class interfaces/basic_interface/BasicInterfaceMain
  static #40= #11 of #17;                     // Summable=class interfaces/basic_interface/BasicInterfaceMain$Summable of class interfaces/basic_interface/BasicInterfaceMain
