class_file/snapshots/runtime-string-combined_literal_and_new-CombinedStringLiteralAndNewMain.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class string.combined_literal_and_new.CombinedStringLiteralAndNewMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #14                      //string/combined_literal_and_new/CombinedStringLiteralAndNewMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = String             #8               // hello
   #8 = Utf8               hello
   #9 = Class              #10              // java/lang/String
  #10 = Utf8               java/lang/String
  #11 = Methodref          #9.#12           // java/lang/String."<init>":(Ljava/lang/String;)V
  #12 = NameAndType        #5:#13           // "<init>":(Ljava/lang/String;)V
  #13 = Utf8               (Ljava/lang/String;)V
  #14 = Class              #15              // string/combined_literal_and_new/CombinedStringLiteralAndNewMain
  #15 = Utf8               string/combined_literal_and_new/CombinedStringLiteralAndNewMain
  #16 = Utf8               Code
  #17 = Utf8               LineNumberTable
  #18 = Utf8               LocalVariableTable
  #19 = Utf8               this
  #20 = Utf8               Lstring/combined_literal_and_new/CombinedStringLiteralAndNewMain;
  #21 = Utf8               main
  #22 = Utf8               ([Ljava/lang/String;)V
  #23 = Utf8               args
  #24 = Utf8               [Ljava/lang/String;
  #25 = Utf8               s
  #26 = Utf8               Ljava/lang/String;
  #27 = Utf8               s1
  #28 = Utf8               s2
  #29 = Utf8               SourceFile
  #30 = Utf8               CombinedStringLiteralAndNewMain.java
{
  public string.combined_literal_and_new.CombinedStringLiteralAndNewMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lstring/combined_literal_and_new/CombinedStringLiteralAndNewMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=3, locals=4, args_size=1
         0: ldc           #7                  // String hello
         2: astore_1                
         3: ldc           #7                  // String hello
         5: astore_2                
         6: new           #9                  // class java/lang/String
         9: dup                     
        10: ldc           #7                  // String hello
        12: invokespecial #11                 // Method java/lang/String."<init>":(Ljava/lang/String;)V
        15: astore_3                
        16: return                  
      LineNumberTable:
        line 5: 0
        line 6: 3
        line 7: 6
        line 8: 16
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       17     0  args   [Ljava/lang/String;
           3       14     1  s      Ljava/lang/String;
           6       11     2  s1     Ljava/lang/String;
          16        1     3  s2     Ljava/lang/String;
}
SourceFile: "CombinedStringLiteralAndNewMain.java"
