class_file/snapshots/vm-exceptions-npe-NpeExceptionMain.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class exceptions.npe.NpeExceptionMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #15                      //exceptions/npe/NpeExceptionMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 4, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // java/lang/NullPointerException
   #8 = Utf8               java/lang/NullPointerException
   #9 = String             #10              // I want to see the stacktrace and error messages
  #10 = Utf8               I want to see the stacktrace and error messages
  #11 = Methodref          #7.#12           // java/lang/NullPointerException."<init>":(Ljava/lang/String;)V
  #12 = NameAndType        #5:#13           // "<init>":(Ljava/lang/String;)V
  #13 = Utf8               (Ljava/lang/String;)V
  #14 = Methodref          #15.#16          // exceptions/npe/NpeExceptionMain.method2:()V
  #15 = Class              #17              // exceptions/npe/NpeExceptionMain
  #16 = NameAndType        #18:#6           // method2:()V
  #17 = Utf8               exceptions/npe/NpeExceptionMain
  #18 = Utf8               method2
  #19 = Methodref          #15.#20          // exceptions/npe/NpeExceptionMain.method1:()V
  #20 = NameAndType        #21:#6           // method1:()V
  #21 = Utf8               method1
  #22 = Utf8               Code
  #23 = Utf8               LineNumberTable
  #24 = Utf8               LocalVariableTable
  #25 = Utf8               this
  #26 = Utf8               Lexceptions/npe/NpeExceptionMain;
  #27 = Utf8               main
  #28 = Utf8               ([Ljava/lang/String;)V
  #29 = Utf8               args
  #30 = Utf8               [Ljava/lang/String;
  #31 = Utf8               SourceFile
  #32 = Utf8               NpeExceptionMain.java
{
  public exceptions.npe.NpeExceptionMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lexceptions/npe/NpeExceptionMain;
  
  static void method2();
    descriptor: ()V
    flags: (0x0008) ACC_STATIC
    Code: 
      stack=3, locals=0, args_size=0
         0: new           #7                  // class java/lang/NullPointerException
         3: dup                     
         4: ldc           #9                  // String I want to see the stacktrace and error messages
         6: invokespecial #11                 // Method java/lang/NullPointerException."<init>":(Ljava/lang/String;)V
         9: athrow                  
      LineNumberTable:
        line 5: 0
  
  static void method1();
    descriptor: ()V
    flags: (0x0008) ACC_STATIC
    Code: 
      stack=0, locals=0, args_size=0
         0: invokestatic  #14                 // Method method2:()V
         3: return                  
      LineNumberTable:
        line 9: 0
        line 10: 3
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=0, locals=1, args_size=1
         0: invokestatic  #19                 // Method method1:()V
         3: return                  
      LineNumberTable:
        line 13: 0
        line 14: 3
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        4     0  args   [Ljava/lang/String;
}
SourceFile: "NpeExceptionMain.java"
